# new-python-project-guide

./: .gitmodules  readme.md
example-project/: pyproject.toml
example-project/example_project/: __main__.py  utils.py
project-example/: mkdocs.yml
project-example/docs/: index.md  styles.css
project-example/tests/: test_example_project.py
